--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@nuxtjs/auth": "^4.9.1",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.13.0",
+    "vue-json-pretty": "^1.6.5"
   },
   "devDependencies": {}
 }
