--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/auth-next": "^5.0.0-1595320532.a4b460f",
     "@nuxtjs/axios": "^5.12.0",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
