--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "nuxt": "^2.13.0",
-    "vue-json-pretty": "^1.6.5"
+    "vue-json-pretty": "^1.6.5",
+    "vue-notification": "^1.3.20",
+    "vuejs-paginate": "^2.1.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@nuxtjs/fontawesome": "^1.1.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@nuxtjs/fontawesome": "^1.1.2"
+  }
 }
